# ProductStapler

./: .dockerignore  .gitattributes  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  setup-github-pages.sh
.github/: GITHUB_PAGES_CONFIG.md
.github/workflows/: deploy.yml
back-end/: Dockerfile  main.py  requirements.txt
backend/: Dockerfile  README.md  config.py  main.py  requirements.txt
backend/routers/: product.py  users.py
data/: .env_data  Dockerfile  README.md  brand_ex.py  config.py  etl.py  mongotest.py  pipeline.py  product_ex.py  requirements.txt  runner.sh  scheduler.py  start.sh
data/digikala/: brand_ex.py  category_ex.py  etl.py  product_ex.py
data/tests/: brand_ex_test.py  etl_test.py  pipeline_test.py  product_ex_test.py
data/util/: async_timer.py  logger.py
frontend/: .dockerignore  Dockerfile  QUICKSTART.md  README.md  index.html  nginx.conf
frontend/src/: App.jsx  index.css
frontend/src/components/: Home.jsx  Level2.jsx  Level3.jsx  Login.jsx  Navbar.jsx  PersianDecoration.jsx  ProductCard.jsx  ProductDetail.jsx  ProtectedRoute.jsx  Register.jsx  StaplerLogo.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/services/: api.js
lab/: _extract.py  clustering.ipynb  dataset.py  model_development.ipynb  preprocessing.ipynb  preprocessing.py
ml/: Dockerfile  README.md  config.py  crontab  dataset.py  model.py  preprocessing.py  requirements.txt  start.sh
models/: preprocessing.py
